--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "DisneyPlusExport2YamtrackImport"
 version = "1.1.0"
-description = "Convert Disney Plus GDPR Watchlist Export into Yamtrack CSV format."
+description = "Convert Disney+ GDPR watchlist export into Yamtrack CSV format."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
